--- a/www/page2.html
+++ b/www/page2.html
@@ -14,27 +14,27 @@
 	<script src="jquerymobile/jquery.mobile-1.4.5.min.js"type="text/javascript"></script>
 	
 	<script type="text/javascript">
-		function get_lotto() 
-		{
-			$.post('http://serwer1615599.home.pl/walko/lotto.php', {}, function(output) {$('#lotto').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_plus.php', {}, function(output) {$('#lotto_plus').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_ss.php', {}, function(output) {$('#lotto_ss').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_mm.php', {}, function(output) {$('#lotto_mm').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_mm_plus.php', {}, function(output) {$('#lotto_mm_plus').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_mm_ss.php', {}, function(output) {$('#lotto_mm_ss').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_ep.php', {}, function(output) {$('#lotto_ep').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_ep_ss.php', {}, function(output) {$('#lotto_ep_ss').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_ml.php', {}, function(output) {$('#lotto_ml').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_ml_ss.php', {}, function(output) {$('#lotto_ml_ss').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_k.php', {}, function(output) {$('#lotto_k').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_k_ss.php', {}, function(output) {$('#lotto_k_ss').html(output).show();})
-			$.post('http://serwer1615599.home.pl/walko/lotto_keno.php', {}, function(output) {$('#lotto_keno').html(output).show();})
-		}		
+		<!-- function get_lotto()  -->
+		<!-- { -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto.php', {}, function(output) {$('#lotto').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_plus.php', {}, function(output) {$('#lotto_plus').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_ss.php', {}, function(output) {$('#lotto_ss').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_mm.php', {}, function(output) {$('#lotto_mm').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_mm_plus.php', {}, function(output) {$('#lotto_mm_plus').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_mm_ss.php', {}, function(output) {$('#lotto_mm_ss').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_ep.php', {}, function(output) {$('#lotto_ep').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_ep_ss.php', {}, function(output) {$('#lotto_ep_ss').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_ml.php', {}, function(output) {$('#lotto_ml').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_ml_ss.php', {}, function(output) {$('#lotto_ml_ss').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_k.php', {}, function(output) {$('#lotto_k').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_k_ss.php', {}, function(output) {$('#lotto_k_ss').html(output).show();}) -->
+			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_keno.php', {}, function(output) {$('#lotto_keno').html(output).show();}) -->
+		<!-- }		 -->
 		<!-- function get_lottoplus()  -->
 		<!-- { -->
 			<!-- $.post('http://serwer1615599.home.pl/walko/lotto_plus.php', {}, function(output) {$('#lotto_plus').html(output).show();}) -->
 		<!-- } -->
-		window.onload = get_lotto;
+		<!-- window.onload = get_lotto; -->
 		<!-- window.onload = get_lottoplus; -->
 		<!-- $(document).on("pagecreate", get_lotto()); -->
 		<!-- document.addEventListener('pageload', get_lotto()); -->
@@ -120,9 +120,9 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 	
-    <!-- <script type="text/javascript"> -->
-        <!-- app.initialize(); -->
-    <!-- </script> -->
+    <script type="text/javascript">
+        app.initialize();
+    </script>
 </body>
 
 </html>
