--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -12,7 +12,24 @@
 	<link href="jquerymobile/jquery.mobile-1.4.5.min.css"rel="stylesheet" type="text/css" />
 	<script src="js/jquery.js"type-"text/javascript"></script>
 	<script src="jquerymobile/jquery.mobile-1.4.5.min.js"type="text/javascript"></script>
-	
+<script type="text/javascript">
+		function get_lotto() 
+		{
+			$.post('http://serwer1615599.home.pl/walko/lotto.php', {}, function(output) {$('#lotto').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_plus.php', {}, function(output) {$('#lotto_plus').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_ss.php', {}, function(output) {$('#lotto_ss').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_mm.php', {}, function(output) {$('#lotto_mm').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_mm_plus.php', {}, function(output) {$('#lotto_mm_plus').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_mm_ss.php', {}, function(output) {$('#lotto_mm_ss').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_ep.php', {}, function(output) {$('#lotto_ep').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_ep_ss.php', {}, function(output) {$('#lotto_ep_ss').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_ml.php', {}, function(output) {$('#lotto_ml').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_ml_ss.php', {}, function(output) {$('#lotto_ml_ss').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_k.php', {}, function(output) {$('#lotto_k').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_k_ss.php', {}, function(output) {$('#lotto_k_ss').html(output).show();})
+			$.post('http://serwer1615599.home.pl/walko/lotto_keno.php', {}, function(output) {$('#lotto_keno').html(output).show();})
+		}		
+		</script>
     <title>Gry liczbowe - projekt</title>
 </head>
 
@@ -27,6 +44,7 @@
 			<p>Aktualne wyniki gier liczbowych w Polsce:</p>
 			<a href="page2.html" data-role="button">Wyniki</a>
 			<br><br>
+			<a href="#dialog_page" data-role="button">Lotto</a>
 			<a href="page3.html" data-role="button">Gry liczbowe w Polsce</a>
 			<a href="page4.html" data-role="button">Historia loterii</a>
 			<a href="page5.html" data-role="button">O projekcie</a>
@@ -39,7 +57,21 @@
 			<h4>&copy; MAMYS BARTYLAK GR.4</h4>
 		</div>
 	</div>
-	
+				<!--dialog_page-->
+			<div id="dialog_page" data-role="dialog" id="home">
+				<div data-role="header">
+					<h1> Lotto </h1>
+				</div>
+				
+				<div data-role="content" style="text-transform: none;">
+					<p>Aktualne wyniki losowań:</p>
+					<a href="#" data-role="button" data-rel="back" data-theme="b">Powrót</a>
+				</div>
+				
+				<div data-role="footer" data-theme='b' data-position="fixed">
+					<h4>&copy; MAMYS BARTYLAK GR.4</h4>
+				</div>
+			</div>
 	<!-- Page 2 -->
 	<!-- <div id="page2" data-role="page" id="home" data-theme='a' data-title="Multi-Page Template"> -->
 		<!-- <div data-role="header" data-theme='b'> -->
