--- a/platforms/browser/www/page6.html
+++ b/platforms/browser/www/page6.html
@@ -16,13 +16,30 @@
 </head>
 
 <body>
-	<div data-role="page" id="home" data-theme='a'>
+	<div data-role="page" id="page6" data-theme='a'>
 		<div data-role="header" data-theme='b'>
 			<h1> Gry liczbowe </h1>
 		</div>
 		
 		<div data-role="content" style="text-transform: none;">
-			
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<br><br>
+				<img src="photo_icons/aut1.png">
+				<br>
+				<p>Wojciech Mamys</p>
+				<p>Grupa 4</p>
+				<p>Indeks: 99297</p>
+				<p>PHP, Javascript, Java, Phonegap</p>
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<br><br>
+				<img src="photo_icons/aut2.png">
+				<br>
+				<p>Michał Bartylak</p>
+				<p>Grupa 4</p>
+				<p>Indeks: 102582</p>
+				<p>HTML, CSS, PHP, JavaScript, GitHub</p>
+			</div>
 			<br><br><br>
 			<div id="back_button"><a href="#" data-role="button" data-rel="back" data-theme="b">Powrót</a></div>
 		</div>
