--- a/www/page5.html
+++ b/www/page5.html
@@ -16,13 +16,52 @@
 </head>
 
 <body>
-	<div data-role="page" id="home" data-theme='a'>
+	<div data-role="page" id="page5" data-theme='a'>
 		<div data-role="header" data-theme='b'>
 			<h1> Gry liczbowe </h1>
 		</div>
 		
 		<div data-role="content" style="text-transform: none;">
-			
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>Android:</p>
+				<br>
+				<img src="tech_icons/android.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>PhoneGap:</p>
+				<br>
+				<img src="tech_icons/phonegap.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>HTML:</p>
+				<br>
+				<img src="tech_icons/html.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>CSS:</p>
+				<br>
+				<img src="tech_icons/css.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>PHP:</p>
+				<br>
+				<img src="tech_icons/php.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>JavaScript:</p>
+				<br>
+				<img src="tech_icons/javascript.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>jQuery Mobile:</p>
+				<br>
+				<img src="tech_icons/jquery.png">
+			</div>
+			<div id="name" style="text-align:center; font-weight: bold;">
+				<p>GitHub:</p>
+				<br>
+				<img src="tech_icons/github.png">
+			</div>
 			<br><br><br>
 			<div id="back_button"><a href="#" data-role="button" data-rel="back" data-theme="b">Powrót</a></div>
 		</div>
